tests/checker/fail/duplicate_type_definition.can
Foo = String

Foo = Int

main = () -> Unit {
    "ok".print()
}
